# benchweb

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md
go/: Makefile
go/fiber/: Makefile  go.mod  go.sum  main.go
go/net-http/: Makefile  go.mod  main.go
python/: Makefile
python/blacksheep/: Makefile  pyproject.toml
python/blacksheep-uvicorn/: Makefile  pyproject.toml
python/blacksheep-uvicorn/benchweb/: __main__.py
python/fastapi/: pyproject.toml
python/fastapi-uvicorn/: pyproject.toml
python/fastapi/benchweb/: __main__.py
python/flask-bjoern/: Makefile  pyproject.toml
python/flask-bjoern/benchweb/: __main__.py
python/flask-gunicorn/: pyproject.toml
python/flask-gunicorn/benchweb/: __main__.py
python/litestar-uvicorn/: Makefile  pyproject.toml
python/litestar-uvicorn/benchweb/: __main__.py
results/: 2024-05-02.txt  2024-1-11.md  2024-3-5.md
rust/: Makefile
rust/axum/: Cargo.toml  Makefile
rust/axum/src/: main.rs
rust/dropshot/: Cargo.toml  Makefile
rust/dropshot/src/: main.rs
