[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]

[project]
name = "benchweb"
requires-python = ">=3.10"
version = "0.0.0"

dependencies = ["fastapi>=0.100", "httptools", "uvicorn", "uvloop"]

[project.scripts]
benchweb = "benchweb.__main__:main"

[tool.mypy]
ignore_missing_imports = true
mypy_path = ["benchweb/"]
show_error_context = true
strict = true
strict_optional = true
# Disable specific `strict` and `strict_optional` checks
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false

[tool.ruff]
ignore = [
    "D",       # Ignore pydocstyle
    "COM812",  # Trailing comma missing
    "FIX002",  # Line contains TODO, consider resolving the issue
    "PLR0913", # Too many arguments to function call (> 5)
    "TCH002",  # Move third-party import into a type-checking block
    "TCH003",  # Move standard library import into a type-checking block
    "TD003",   # Missing issue link on the line following this TODO
    "UP006",   # Use `list` instead of `List` for type annotation
]
line-length = 100
src = ["benchweb/"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
